<resources>
    <string name="app_name">Team manager</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="login_details_message">Please enter your login details to continue</string>
    <string name="signing_in">Signing in please wait...</string>
    <string name="creating_acount">Creating account please wait...</string>
    <string name="no_internet">No internet</string>
    <string name="no_internet_message">Please check your internet connection</string>
    <string name="signin_error">Signin error</string>
    <string name="signin_error_message">SignIn error please check your details</string>
    <string name="register_error">Register error</string>
    <string name="register_success">Registration complete</string>
    <string name="register_success_message">Congratulations %1$s you are now part of team manager</string>
    <string name="register_error_message">Register error please check your details</string>
    <string name="invalid_username_message">Please enter a valid username !</string>
    <string name="invalid_name_message">Please enter a valid name !</string>
    <string name="invalid_surname_message">Please enter a valid surname !</string>
    <string name="invalid_email_message">Please enter a valid email !</string>
    <string name="invalid_password_message">Please enter a valid password !</string>
    <string name="invalid_password_confirm_message">Your passwords do not match !</string>
    <string name="invalid_usertype_message">Please select a employeeType</string>
    <string name="invalid_usertype_task_description">Please describe the task</string>
    <string name="invalid_usertype_task_asignee">Please select an assignee</string>
    <string name="invalid_usertype_priority">Please select a priority</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="register_details_message">Please enter your details</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account_message">Create a new account</string>
    <string name="go_to_login">Go to signin</string>
    <string name="quit_registration">Quit registration</string>
    <string name="worker">Worker</string>
    <string name="supervisor">Supervisor</string>
    <string name="email">Email</string>
    <string name="signin_technical_error">Sorry we are experiencing technical problems</string>
    <string name="user_greeting_message">Hi %1$s  please enter your password to continue</string>
    <string name="create_new_account">Create new account</string>
    <string name="generic_error_message">Error message</string>
    <string name="generic_success_message">Success message</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_gender">Please select your gender</string>
    <string name="mobile_number">Mobile number</string>
    <string name="invalid_mobile_message">Please enter a valid mobile number</string>
    <string name="switch_user">Switch user</string>
    <string name="demo_unavailable_feature_message">Feature not available in demo mode</string>
    <string name="title_activity_dud">DudActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="view_profile">View profile</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="pending_tasks">Pending tasks</string>
    <string name="tasks">Tasks</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="create_task">Create task</string>
    <string name="history">History</string>
    <string name="title_activity_supervisor_dashboard">SupervisorDashboardActivity</string>
    <string name="worker_welcome_message">Welcome %1$s please review your tasks and complete the pending ones</string>
    <string name="supervisor_welcome_message">Welcome %1$s please create tasks for your subordinates</string>
    <string name="checking_tasks_please_wait">Checking tasks please wait...</string>
    <string name="task_description">Describe the task...</string>
    <string name="set_task_priority">Set task priority</string>
    <string name="dialo_def_tag">dialog</string>
    <string name="new_task">Enter task details</string>
    <string name="new_task_title">New task</string>
    <string name="choose_due_date">Choose due date</string>
    <string name="choose_time_due">Choose dueTime due</string>
    <string name="this_feature_is_not_available_in_demo_mode">This feature is not available in demo mode</string>
    <string name="please_wait">Please wait...</string>
    <string name="next">Next</string>
    <string name="time_frag_title">Choose cut off dueTime</string>
    <string name="date_frag_title">Choose due date</string>
    <string name="details_frag_title">Enter task details</string>
    <string name="select_assignee_frag">Select assignee</string>
    <string name="task_creation_success_message">The task was created successfully</string>
    <string name="successful">Successful</string>
    <string name="new_task_message">You have a new task waiting</string>
    <string name="main_view">Main view</string>
    <string name="task_started">Task started</string>
    <string name="task_ended">Task ended</string>
    <string name="no_pending_tasks">You have no pending task</string>
    <string name="no_completed_tasks">You have no completed task</string>
    <string name="forgot_password">Forgot password</string>
    <string name="start_task">Start task</string>
    <string name="task_completed">Task completed</string>
    <string name="complete_task">Complete task</string>
    <string name="active_task">Active task</string>
    <string name="complete_active_message">Please complete this task before moving on to another</string>
    <string name="continue_current_task">Continue current task</string>
    <string name="no_task_in_progress">No task in progress</string>
    <string name="gender">Gender</string>
    <string name="employee_id">Employee Id</string>
    <string name="enter_your_surname">Enter your surname...</string>
    <string name="enter_your_name">Enter your name...</string>
    <string name="full_names">Full names</string>
    <string name="employee_type">Rank</string>
    <string name="upload_picture">Upload pic</string>
    <string name="take_picture">Take pic</string>
    <string name="loading_profile">Loading profile</string>
    <string name="send_to">Send to</string>
    <string name="upload_failed">Upload failed please try again</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_email_to_continue">Enter your email to continue</string>
    <string name="forgot_password_success_message">Request successful, please check your email for further instructions</string>
    <string name="success_title">Success</string>
    <string name="error_title">Error</string>
    <string name="forgot_password_error_message">The email you entered does not exist</string>
    <string name="reseting_password">Reseting password...</string>
    <string name="worker_history_message">This is your work history</string>
    <string name="supervisor_history_message">These are the tasks you created</string>
    <string name="no_history_message">Nothing in your history</string>
    <string name="click_the_edit_icon_if_you_with_to_make_changes">Click the edit icon if you with to make changes</string>
</resources>
