<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/large_view_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.forgotPassword.ForgotPasswordActivity">

    <TextView
        style="@style/mediumDarkLabel"
        android:gravity="center"
        android:layout_marginBottom="@dimen/medium_view_padding"
        android:text="@string/enter_your_email_to_continue"/>

    <EditText
        android:id="@+id/txtEmail"
        style="@style/mediumDarkEditText"
        android:hint="@string/email"/>

    <TextView
        android:id="@+id/tvEmailError"
        style="@style/smallErrorLabel"/>

    <Button
        style="@style/mediumGreenButton"
        android:text="@string/reset_password"
        android:onClick="onForgotPasswordClicked"/>

</LinearLayout>