<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:animateLayoutChanges="true"
    tools:context=".features.registration.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/txtName"
                    style="@style/mediumLightEditText"
                    android:layout_marginTop="0dp"
                    android:hint="@string/name"/>

                <TextView
                    android:id="@+id/tvNameError"
                    style="@style/smallErrorLabel"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="Error"/>

                <EditText
                    android:id="@+id/txtSurname"
                    style="@style/mediumLightEditText"
                    android:layout_marginTop="12dp"
                    android:hint="@string/surname"/>

                <TextView
                    android:id="@+id/tvSurnameNameError"
                    style="@style/smallErrorLabel"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="Error"/>

                <EditText
                    android:id="@+id/txtEmail"
                    style="@style/mediumLightEditText"
                    android:layout_marginTop="12dp"
                    android:hint="@string/email"/>

                <TextView
                    android:id="@+id/tvEmailError"
                    style="@style/smallErrorLabel"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="Error"/>

                <EditText
                    android:id="@+id/txtPassword"
                    style="@style/mediumLightEditText"
                    android:layout_marginTop="12dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/tvPasswordError"
                    style="@style/smallErrorLabel"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="Error"/>

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    style="@style/mediumLightEditText"
                    android:layout_marginTop="12dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/tvConfirmPasswordError"
                    style="@style/smallErrorLabel"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="Error"/>


                <RadioGroup
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                   <RadioButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/worker"
                       android:textColor="@color/lightestText"/>

                   <RadioButton
                       android:layout_marginLeft="20dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/supervisor"
                       android:textColor="@color/lightestText"/>

                </RadioGroup>

                <TextView
                    android:id="@+id/tvEmployeeTypeError"
                    style="@style/smallErrorLabel"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="22dp"
                    android:text="Error"/>

                <Button
                    style="@style/mediumGreenButton"
                    android:layout_marginTop="12dp"
                    android:text="@string/register"
                    android:onClick="onRegisterButtonClicked"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>